@@ -20,3 +20,8 @@ __all__ = [
 
 
 __version__ = '1.5dev'
+
+try:
+    import blinker._async
+except (ImportError, SyntaxError):
+    pass
